add multi-source collection engine
collectors:
- RSS feeds (Reuters, AP, BBC, Ars Technica, 23+ sources)
- GDELT (8 query templates: geopolitics, military, cyber, financial)
- ArXiv (8 CS categories, 100 papers max)
- Reddit (intelligence-focused subreddits)
- SEC EDGAR (8-K, 10-K, 13-F, Form 4 filings)
- ACLED (armed conflict data, free for research)
- OpenSanctions (sanctions/PEP data)
- Local news (Chattanooga region)

features:
- CollectionScheduler with health monitoring
- BaseCollector ABC with CollectedItem dataclass
- Configurable intervals per collector
- Deduplication by URL and content hash
- CollectionRun tracking for history

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,16 @@ data/
 # OS
 .DS_Store
 Thumbs.db
+
+# Internal planning docs (not for version control)
+0-CustomClaude-CheatSheet.md
+ADAPT_INTEL_BRIEF_BEST_PRACTICES.md
+Claude_Pulse_PROBLEMS.md
+ENTITY_EXTRACTION_IMPROVEMENTS_PLAN.md
+IMPLEMENTATION_PLAN.md
+INTELLIGENCE_MODULES_IMPLEMENTATION_PLAN.md
+PULSE_INTELLIGENCE_IMPROVEMENTS.md
+THE_PULSE_INTEGRATION_PLAN.md
+
+# Node modules
+node_modules/
